--- a/training.ipynb
+++ b/training.ipynb
@@ -548,10 +548,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#predictions[0][0].cpu().detach().numpy().tolist()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m actuals \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat([y[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m x, y \u001b[39min\u001b[39;49;00m \u001b[39miter\u001b[39;49m(val_dataloader)])\n\u001b[1;32m      4\u001b[0m predictions \u001b[39m=\u001b[39m best_tft\u001b[39m.\u001b[39mpredict(val_dataloader)\n\u001b[1;32m      5\u001b[0m mae \u001b[39m=\u001b[39m (actuals \u001b[39m-\u001b[39m predictions)\u001b[39m.\u001b[39mabs()\u001b[39m.\u001b[39mmean(dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39mitem()\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got list"
+     ]
+    }
+   ],
+   "source": [
+    "#predictions[0][0].cpu().detach().numpy().tolist()\n",
+    "\n",
+    "actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
+    "predictions = best_tft.predict(val_dataloader)\n",
+    "mae = (actuals - predictions).abs().mean(dim=0).mean().item()\n",
+    "\n",
+    "mae"
+   ]
   },
   {
    "cell_type": "code",
@@ -575,6 +595,15 @@
     "actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
     "predictions = best_tft.predict(val_dataloader)\n",
     "(actuals - predictions).abs().mean().item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate the mean squared error"
    ]
   },
   {
