Progress on simple NN

--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -10,30 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
+    "from sklearn import preprocessing\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load from s3 instead?\n",
-    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')\n",
+    "df = pd.read_csv('.././Data/xMonths_SimulatedStaff.csv')\n",
     "#../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +353,7 @@
        "9                 0         9        group_1  2021      5   18    10  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +383,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['Timestamp'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert constant_group to numerical value\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "df['constant_group'] = le.fit_transform(df['constant_group'])\n",
+    "df['holiday'] = le.fit_transform(df['holiday'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +428,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>subtotal</th>\n",
        "      <th>transaction_count</th>\n",
        "      <th>rain</th>\n",
@@ -430,19 +449,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>17/05/2021 10:00</td>\n",
        "      <td>428.03</td>\n",
        "      <td>11.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>12.7</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>69.62</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>17</td>\n",
@@ -450,19 +468,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>17/05/2021 11:00</td>\n",
        "      <td>324.78</td>\n",
        "      <td>15.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>13.4</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>69.62</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>17</td>\n",
@@ -470,19 +487,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>17/05/2021 12:00</td>\n",
        "      <td>279.75</td>\n",
        "      <td>12.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>13.6</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>69.62</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>17</td>\n",
@@ -490,19 +506,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>17/05/2021 13:00</td>\n",
        "      <td>1630.59</td>\n",
        "      <td>29.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>14.1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>69.62</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>17</td>\n",
@@ -510,19 +525,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>17/05/2021 14:00</td>\n",
        "      <td>1166.10</td>\n",
        "      <td>18.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>15.9</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>69.62</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>17</td>\n",
@@ -546,23 +560,21 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5062</th>\n",
-       "      <td>30/11/2022 14:00</td>\n",
        "      <td>4779.11</td>\n",
        "      <td>82.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>83.45</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5062</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
        "      <td>30</td>\n",
@@ -570,19 +582,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5063</th>\n",
-       "      <td>30/11/2022 15:00</td>\n",
        "      <td>2460.84</td>\n",
        "      <td>54.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>83.45</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5063</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
        "      <td>30</td>\n",
@@ -590,19 +601,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5064</th>\n",
-       "      <td>30/11/2022 16:00</td>\n",
        "      <td>2026.30</td>\n",
        "      <td>43.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>83.45</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5064</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
        "      <td>30</td>\n",
@@ -610,19 +620,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5065</th>\n",
-       "      <td>30/11/2022 17:00</td>\n",
        "      <td>2346.13</td>\n",
        "      <td>44.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>83.45</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5065</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
        "      <td>30</td>\n",
@@ -630,19 +639,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5066</th>\n",
-       "      <td>30/11/2022 18:00</td>\n",
        "      <td>401.19</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>83.45</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5066</td>\n",
-       "      <td>group_1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2022</td>\n",
        "      <td>11</td>\n",
        "      <td>30</td>\n",
@@ -650,66 +658,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5067 rows × 17 columns</p>\n",
+       "<p>5067 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Timestamp  subtotal  transaction_count  rain  temperature  \\\n",
-       "0     17/05/2021 10:00    428.03               11.0   0.0         12.7   \n",
-       "1     17/05/2021 11:00    324.78               15.0   0.0         13.4   \n",
-       "2     17/05/2021 12:00    279.75               12.0   0.0         13.6   \n",
-       "3     17/05/2021 13:00   1630.59               29.0   0.0         14.1   \n",
-       "4     17/05/2021 14:00   1166.10               18.0   0.0         15.9   \n",
-       "...                ...       ...                ...   ...          ...   \n",
-       "5062  30/11/2022 14:00   4779.11               82.0   0.0          0.0   \n",
-       "5063  30/11/2022 15:00   2460.84               54.0   0.0          0.0   \n",
-       "5064  30/11/2022 16:00   2026.30               43.0   0.0          0.0   \n",
-       "5065  30/11/2022 17:00   2346.13               44.0   0.0          0.0   \n",
-       "5066  30/11/2022 18:00    401.19                6.0   0.0          0.0   \n",
+       "      subtotal  transaction_count  rain  temperature  holiday  oil_price  \\\n",
+       "0       428.03               11.0   0.0         12.7        0      69.62   \n",
+       "1       324.78               15.0   0.0         13.4        0      69.62   \n",
+       "2       279.75               12.0   0.0         13.6        0      69.62   \n",
+       "3      1630.59               29.0   0.0         14.1        0      69.62   \n",
+       "4      1166.10               18.0   0.0         15.9        0      69.62   \n",
+       "...        ...                ...   ...          ...      ...        ...   \n",
+       "5062   4779.11               82.0   0.0          0.0        0      83.45   \n",
+       "5063   2460.84               54.0   0.0          0.0        0      83.45   \n",
+       "5064   2026.30               43.0   0.0          0.0        0      83.45   \n",
+       "5065   2346.13               44.0   0.0          0.0        0      83.45   \n",
+       "5066    401.19                6.0   0.0          0.0        0      83.45   \n",
        "\n",
-       "      holiday  oil_price  workforce_type_1  workforce_type_2  \\\n",
-       "0       False      69.62               1.0               2.0   \n",
-       "1       False      69.62               1.0               2.0   \n",
-       "2       False      69.62               1.0               2.0   \n",
-       "3       False      69.62               1.0               2.0   \n",
-       "4       False      69.62               1.0               2.0   \n",
-       "...       ...        ...               ...               ...   \n",
-       "5062    False      83.45               1.0               4.0   \n",
-       "5063    False      83.45               1.0               4.0   \n",
-       "5064    False      83.45               1.0               4.0   \n",
-       "5065    False      83.45               1.0               4.0   \n",
-       "5066    False      83.45               1.0               4.0   \n",
+       "      workforce_type_1  workforce_type_2  workforce_type_3  workforce_type_4  \\\n",
+       "0                  1.0               2.0               3.0               0.0   \n",
+       "1                  1.0               2.0               3.0               1.0   \n",
+       "2                  1.0               2.0               3.0               1.0   \n",
+       "3                  1.0               2.0               3.0               1.0   \n",
+       "4                  1.0               2.0               3.0               1.0   \n",
+       "...                ...               ...               ...               ...   \n",
+       "5062               1.0               4.0               5.0               0.0   \n",
+       "5063               1.0               4.0               5.0               0.0   \n",
+       "5064               1.0               4.0               5.0               0.0   \n",
+       "5065               1.0               4.0               5.0               0.0   \n",
+       "5066               1.0               4.0               5.0               0.0   \n",
        "\n",
-       "      workforce_type_3  workforce_type_4  time_idx constant_group  year  \\\n",
-       "0                  3.0               0.0         0        group_1  2021   \n",
-       "1                  3.0               1.0         1        group_1  2021   \n",
-       "2                  3.0               1.0         2        group_1  2021   \n",
-       "3                  3.0               1.0         3        group_1  2021   \n",
-       "4                  3.0               1.0         4        group_1  2021   \n",
-       "...                ...               ...       ...            ...   ...   \n",
-       "5062               5.0               0.0      5062        group_1  2022   \n",
-       "5063               5.0               0.0      5063        group_1  2022   \n",
-       "5064               5.0               0.0      5064        group_1  2022   \n",
-       "5065               5.0               0.0      5065        group_1  2022   \n",
-       "5066               5.0               0.0      5066        group_1  2022   \n",
+       "      time_idx  constant_group  year  month  day  hour  \n",
+       "0            0               0  2021      5   17    10  \n",
+       "1            1               0  2021      5   17    11  \n",
+       "2            2               0  2021      5   17    12  \n",
+       "3            3               0  2021      5   17    13  \n",
+       "4            4               0  2021      5   17    14  \n",
+       "...        ...             ...   ...    ...  ...   ...  \n",
+       "5062      5062               0  2022     11   30    14  \n",
+       "5063      5063               0  2022     11   30    15  \n",
+       "5064      5064               0  2022     11   30    16  \n",
+       "5065      5065               0  2022     11   30    17  \n",
+       "5066      5066               0  2022     11   30    18  \n",
        "\n",
-       "      month  day  hour  \n",
-       "0         5   17    10  \n",
-       "1         5   17    11  \n",
-       "2         5   17    12  \n",
-       "3         5   17    13  \n",
-       "4         5   17    14  \n",
-       "...     ...  ...   ...  \n",
-       "5062     11   30    14  \n",
-       "5063     11   30    15  \n",
-       "5064     11   30    16  \n",
-       "5065     11   30    17  \n",
-       "5066     11   30    18  \n",
-       "\n",
-       "[5067 rows x 17 columns]"
+       "[5067 rows x 16 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
