Simple regression nn with mse: 148 and mae 6.76

--- a/training.ipynb
+++ b/training.ipynb
@@ -566,11 +566,11 @@
    "source": [
     "#predictions[0][0].cpu().detach().numpy().tolist()\n",
     "\n",
-    "actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
-    "predictions = best_tft.predict(val_dataloader)\n",
-    "mae = (actuals - predictions).abs().mean(dim=0).mean().item()\n",
+    "#actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
+    "#predictions = best_tft.predict(val_dataloader)\n",
+    "#mae = (actuals - predictions).abs().mean(dim=0).mean().item()\n",
     "\n",
-    "mae"
+    "#mae\n"
    ]
   },
   {
