Multi Layer regression model and decoupling

--- a/training.ipynb
+++ b/training.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning.callbacks import EarlyStopping, LearningRateMonitor\n",
-    "#from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "import torch\n",
     "\n",
     "from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
@@ -46,7 +46,7 @@
     "from pytorch_forecasting.metrics import SMAPE, PoissonLoss, QuantileLoss, MultiLoss\n",
     "from pytorch_forecasting.models.temporal_fusion_transformer.tuning import optimize_hyperparameters\n",
     "\n",
-    "from model_architecture import tft, training, val_dataloader, train_dataloader, validation, training\n",
+    "from model_architecture import tft, training, val_dataloader, train_dataloader, validation\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -510,6 +510,7 @@
    "source": [
     "# load the best model according to the validation loss\n",
     "# (given that we use early stopping, this is not necessarily the last epoch)\n",
+    "# Previous best trained model: /Users/deividas/Workplace/Workforce_Scheduler_Workspace/demand-forecaster-sam/lightning_logs/version_36/checkpoints/epoch=20-step=630.ckpt\n",
     "\n",
     "best_model_path = trainer.checkpoint_callback.best_model_path\n",
     "print(best_model_path)\n",
@@ -517,7 +518,6 @@
     "#best_tft = savedTft # TODO: Comment out when retraining again\n",
     "\n",
     "raw_prediction, x = best_tft.predict(\n",
-    "    #training.filter(lambda x: (x.constant_group == \"group_1\")),\n",
     "    training,\n",
     "    mode=\"raw\",\n",
     "    return_x=True,\n",
@@ -548,62 +548,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected Tensor as element 0 in argument 0, but got list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#predictions[0][0].cpu().detach().numpy().tolist()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m actuals \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat([y[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m x, y \u001b[39min\u001b[39;49;00m \u001b[39miter\u001b[39;49m(val_dataloader)])\n\u001b[1;32m      4\u001b[0m predictions \u001b[39m=\u001b[39m best_tft\u001b[39m.\u001b[39mpredict(val_dataloader)\n\u001b[1;32m      5\u001b[0m mae \u001b[39m=\u001b[39m (actuals \u001b[39m-\u001b[39m predictions)\u001b[39m.\u001b[39mabs()\u001b[39m.\u001b[39mmean(dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39mitem()\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got list"
-     ]
+     "data": {
+      "text/plain": [
+       "[[tensor([[52., 61., 66.,  ...,  1.,  0., 48.],\n",
+       "          [61., 66., 44.,  ...,  0., 48., 68.],\n",
+       "          [66., 44., 36.,  ..., 48., 68., 94.],\n",
+       "          ...,\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.]]),\n",
+       "  tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.]]),\n",
+       "  tensor([[3., 3., 3.,  ..., 3., 4., 4.],\n",
+       "          [3., 3., 3.,  ..., 4., 4., 4.],\n",
+       "          [3., 3., 3.,  ..., 4., 4., 4.],\n",
+       "          ...,\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.]]),\n",
+       "  tensor([[4., 4., 4.,  ..., 4., 5., 5.],\n",
+       "          [4., 4., 4.,  ..., 5., 5., 5.],\n",
+       "          [4., 4., 4.,  ..., 5., 5., 5.],\n",
+       "          ...,\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.]]),\n",
+       "  tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.]])],\n",
+       " None,\n",
+       " [tensor([[32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          ...,\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.]]),\n",
+       "  tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.]]),\n",
+       "  tensor([[4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          ...,\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.]]),\n",
+       "  tensor([[5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          ...,\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.]]),\n",
+       "  tensor([[0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.]])],\n",
+       " None,\n",
+       " [tensor([[32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          ...,\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.]]),\n",
+       "  tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.]]),\n",
+       "  tensor([[4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          ...,\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.]]),\n",
+       "  tensor([[5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          ...,\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.]]),\n",
+       "  tensor([[0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.]])],\n",
+       " None,\n",
+       " [tensor([[32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          ...,\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.]]),\n",
+       "  tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.]]),\n",
+       "  tensor([[4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          ...,\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.]]),\n",
+       "  tensor([[5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          ...,\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.]]),\n",
+       "  tensor([[0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.]])],\n",
+       " None,\n",
+       " [tensor([[32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          ...,\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.],\n",
+       "          [32., 39., 66.,  ..., 43., 44.,  6.]]),\n",
+       "  tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.]]),\n",
+       "  tensor([[4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          ...,\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.],\n",
+       "          [4., 4., 4.,  ..., 4., 4., 4.]]),\n",
+       "  tensor([[5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          ...,\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.],\n",
+       "          [5., 5., 5.,  ..., 5., 5., 5.]]),\n",
+       "  tensor([[0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 1.,  ..., 0., 0., 0.]])],\n",
+       " None]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#predictions[0][0].cpu().detach().numpy().tolist()\n",
+    "# Extract the actual target values from val_dataloader\n",
+    "actual_target = []\n",
+    "for batch in val_dataloader:\n",
+    "    actual_target.append(batch[1])\n",
     "\n",
-    "#actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
-    "#predictions = best_tft.predict(val_dataloader)\n",
-    "#mae = (actuals - predictions).abs().mean(dim=0).mean().item()\n",
-    "\n",
-    "#mae\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected Tensor as element 0 in argument 0, but got list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# calculate mean absolute error on validation set -> Done for transaction_count since there is much more variability in it. Could we include the other metrics as well? such as workforce_demands \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m actuals \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat([y[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m x, y \u001b[39min\u001b[39;49;00m \u001b[39miter\u001b[39;49m(val_dataloader)])\n\u001b[1;32m      3\u001b[0m predictions \u001b[39m=\u001b[39m best_tft\u001b[39m.\u001b[39mpredict(val_dataloader)\n\u001b[1;32m      4\u001b[0m (actuals \u001b[39m-\u001b[39m predictions)\u001b[39m.\u001b[39mabs()\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39mitem()\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got list"
-     ]
-    }
-   ],
-   "source": [
-    "# calculate mean absolute error on validation set -> Done for transaction_count since there is much more variability in it. Could we include the other metrics as well? such as workforce_demands \n",
-    "actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
-    "predictions = best_tft.predict(val_dataloader)\n",
-    "(actuals - predictions).abs().mean().item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calculate the mean squared error"
+    "# Flatten the list\n",
+    "actual_target = [item for sublist in actual_target for item in sublist]\n",
+    "actual_target"
    ]
   },
   {
@@ -719,6 +865,95 @@
     "plt.xlim(-100, 80)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('prediction',\n",
+       " 'encoder_attention',\n",
+       " 'decoder_attention',\n",
+       " 'static_variables',\n",
+       " 'encoder_variables',\n",
+       " 'decoder_variables',\n",
+       " 'decoder_lengths',\n",
+       " 'encoder_lengths')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.keys()\n",
+    "#x['decoder_target']\n",
+    "raw_predictions.keys()\n",
+    "#raw_prediction[\"prediction\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (63) must match the size of tensor b (7) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[74], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39m#predictions = best_tft.predict(val_dataloader)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m predictions \u001b[39m=\u001b[39m raw_predictions[\u001b[39m\"\u001b[39m\u001b[39mprediction\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m (actuals \u001b[39m-\u001b[39;49m predictions)\u001b[39m.\u001b[39mabs()\u001b[39m.\u001b[39mmean()\u001b[39m.\u001b[39mitem()\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (63) must match the size of tensor b (7) at non-singleton dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate mean absolute error on validation set -> Done for transaction_count since there is much more variability in it. Could we include the other metrics as well? such as workforce_demands \n",
+    "#actuals = torch.cat([y[0] for x, y in iter(val_dataloader)])\n",
+    "actuals = x['decoder_target'][0]\n",
+    "\n",
+    "\n",
+    "#predictions = best_tft.predict(val_dataloader)\n",
+    "predictions = raw_predictions[\"prediction\"][0]\n",
+    "\n",
+    "(actuals - predictions).abs().mean().item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([25.7689, 31.4850, 38.1814, 44.5437, 50.3644, 56.9547, 66.3858])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_predictions[\"prediction\"][0].shape\n",
+    "\n",
+    "#x[\"decoder_target\"][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -737,7 +972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
