--- a/OtherModels/model-trainer.ipynb
+++ b/OtherModels/model-trainer.ipynb
@@ -107,7 +107,6 @@
    "source": [
     "train_data = TrainData(torch.FloatTensor(X_train), torch.FloatTensor(y_train))\n",
     "\n",
-    "\n",
     "test_data = TestData(torch.FloatTensor(X_test))"
    ]
   },
@@ -128,6 +127,10 @@
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "\n",
+    "            # If loss is chattering, reduce learning rate by 10x TODO\n",
+    "\n",
+    "\n",
     "        # Print progress\n",
     "        print('Epoch [{}/{}], Loss: {:.4f}'.format(epoch+1, num_epochs, loss.item()))\n"
    ]
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
